# rimed

./: Cargo.toml  README.md
src/: editor.rs  main.rs
