[package]
name = "rimed"
version = "0.0.1"
edition = "2021"
license = "BSD-3-Clause"
keywords = ["editor", "vim"]
categories = ["editors", "development-tools"]
repository = "https://github.com/alwindoss/rimed"
readme = "README.md"
description = "Modern Editor"
authors = ["Alwin Doss"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "2.0.1"
rand = "0.8"
